# Treasure-track

./: CMakeLists.txt  Car_Racer.iss  README.md
.github/workflows/: build.yml
Assets/: Objects-guia.json  Objects.json
Assets/Arbol/: Arbol.mtl
Assets/Banco/: Banco.mtl
Assets/BigBen/: BigBen.mtl
Assets/Coche1/: K1AGJVQ50VCSD2UOPBS13FD0S.mtl
Assets/Coche2/: CuatroRuedas.mtl  coche3.mtl  coche3SinRuedas.mtl
Assets/Coche4/: Prueba1.mtl
Assets/DefinitiveCity/: DefinitiveCity.mtl  SinArbol.mtl  town.mtl
Assets/HIGHWAY_INTERSTATE_SOURCE/: Highway Interchange.mtl
Assets/Mapa/: townBlender.mtl
Assets/Moneda/: Moneda.mtl
Assets/PruebaSinRuedas/: PruebaSinRuedas.mtl  PruebaUnaRueda.mtl
Assets/PruebaUnaRueda/: Coche5.mtl
Assets/StopSign/: Stop.mtl
Assets/american_road/: license.txt  scene.gltf
Assets/american_road_curve_ahead/: license.txt  scene.gltf
Assets/concrete_road_barrier_photoscanned/: license.txt  scene.gltf
Assets/free__la_tour_eiffel/: license.txt  scene.gltf
Assets/mapTest/: mapTest.mtl
BULLET_PHYSICS/lib/: BulletExampleBrowserLib.lib  BulletRoboticsGUI.lib  BussIK.lib  OpenGLWindow.lib  clsocket.lib
Shaders/: flat_shdrML.frag  flat_shdrML.vert  gouraud_shdrML.frag  gouraud_shdrML.vert  object.frag  object.vert  phong_shdrML.frag  phong_shdrML.vert  shader.frag  shader.vert  shader_text.frag  shader_text.vert  shadow.vert  skybox.FRAG  skybox.VERT
Test/: Test-main.cpp  TestCamera.hpp
Tests/: TestCamera.hpp  TestLights.hpp  TestModel.hpp  TestRenderer.hpp  Utility.hpp  main.cpp  testIntegration.json  testRenderer.json
src/: Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  Game.cpp  Game.h  Ground.cpp  Ground.h  GroundMesh.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  MusicBuffer.cpp  MusicBuffer.h  Object.cpp  Object.h  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsObject.h  Player.cpp  Player.h  PlayerVehicle.cpp  PlayerVehicle.h  PointLight.cpp  Primitives.cpp  Primitives.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Shadow.cpp  Shadow.h  SoundDevice.h  SpotLight.cpp  SpotLight.h  StringHandler.cpp  (+20 more)
src/Encabezados/: stdafx.h
src/Entorn/: escena.cpp  escena.h  glut_geometry.h  main.cpp  main.h  material.cpp  material.h  objLoader.cpp  objLoader.h  quatern.cpp  shader.cpp  shader.h  stdafx.h  visualitzacio.cpp  visualitzacio.h
src/General/: Camera.cpp  Camera.h  Coin.cpp  Coin.h  Object.cpp  Object.h  Player.cpp  Player.h  Shader.cpp  Shader.h  skybox.cpp  skybox.h
src/Graficos/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  UIHandler.cpp  UIHandler.h  skybox.cpp  skybox.h
src/Graficos/Luces/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/Graficos/Modelo/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h
src/Graficos/Modelo-diciembre/: Material.cpp  Material.h  Mesh.cpp  Model.cpp  Model.h
src/Graficos/Sombras/: ShadowMap.h
src/Lights/: DirectionalLight.cpp  DirectionalLight.h  Light.h  SpotLight.h
src/Luces/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  SpotLight.cpp
src/Modelo/: Material.h  Mesh.h  Texture.cpp  Texture.h
src/Music/: MusicBuffer.cpp  MusicBuffer.h  MySoundEffects.cpp  MySoundEffects.h  SoundDevice.cpp  SoundDevice.h  SoundEffectsLibrary.cpp  SoundEffectsLibrary.h  SoundEffectsPlayer.cpp  SoundEffectsPlayer.h
src/Sombras/: ShadowMap.h
src/Sound/: MusicBuffer.cpp
src/Unknown/: GLDebugDrawer.h  PhysicsEngine.cpp  PhysicsEngine.h  PlayerVehicle.cpp  PlayerVehicle.h  Window.cpp
src/include/: stdafx.h
